--- a/ChallengeBoard.Web/Content/Styles/Base/skeleton.scss
+++ b/ChallengeBoard.Web/Content/Styles/Base/skeleton.scss
@@ -134,7 +134,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
-  font-weight: 300; }
+  font-weight: bold; }
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -174,7 +174,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #fff;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -183,9 +183,9 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #bbb;
+  background-color: #00d2a9;
+  border-radius: 25px;
+  border: none;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -226,6 +226,11 @@ input[type="button"].button-primary:focus {
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+form {
+    width: 200px;
+    margin: 0 auto;
+}
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -273,7 +278,8 @@ label,
 legend {
   display: block;
   margin-bottom: .5rem;
-  font-weight: 600; }
+  color: #fff;
+}
 fieldset {
   padding: 0;
   border-width: 0; }
