--- a/ChallengeBoard.Web/Views/Home/Index.cshtml
+++ b/ChallengeBoard.Web/Views/Home/Index.cshtml
@@ -2,10 +2,12 @@
 @using ChallengeBoard.Web.Models.ViewModels
 @model BoardViewModel
 
+
 <div class="cards" id="Cards">
     <div class="item intro">
+        <div id="user-hide">@Model.CurrentUser.UserName</div>
         <div class="intro-progress" id="ProgressBarContainer"></div>
-        <h1 class="intro-name">Christian Andersson</h1>
+        <h1 class="intro-name">@Model.CurrentUser.Name</h1>
         <strong class="intro-score">53</strong>
         <div class="intro-awards">
             <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>
@@ -32,3 +34,4 @@
         </div>
     }
 </div>
+
