Authentication and automatic count of cardpoints

--- a/ChallengeBoard.Web/Views/Home/Index.cshtml
+++ b/ChallengeBoard.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <div id="user-hide">@Model.CurrentUser.UserName</div>
         <div class="intro-progress" id="ProgressBarContainer"></div>
         <h1 class="intro-name">@Model.CurrentUser.Name</h1>
-        <strong class="intro-score">53</strong>
+        <strong class="intro-score">@Model.TotalPoints</strong>
         <div class="intro-awards">
             <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>
             <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>
