--- a/ChallengeBoard.Web/Content/Styles/Layout/Common.scss
+++ b/ChallengeBoard.Web/Content/Styles/Layout/Common.scss
@@ -20,7 +20,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8653be', end
 }
 
 body, .wrap {
-    height: 100%;
+    height: 125%;
 }
 
 .header-wrap {
@@ -28,4 +28,5 @@ body, .wrap {
     margin: 0 auto;
     text-align: center;
     color: #fff;
+    padding-top: 8%;
 }
