--- a/ChallengeBoard.Web/Static/Styles/App.css
+++ b/ChallengeBoard.Web/Static/Styles/App.css
@@ -1036,6 +1036,8 @@ Styleguide 3.1.
   right: 0;
   border-radius: 50%;
   mix-blend-mode: soft-light; }
+  .card-icon-ring.fulfilled {
+    background-color: #00cc99; }
 
 .card-meta {
   position: absolute;
@@ -1176,13 +1178,14 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8653be', endColorstr='#47b8c4',GradientType=1 ); }
 
 body, .wrap {
-  height: 100%; }
+  height: 125%; }
 
 .header-wrap {
   width: 340px;
   margin: 0 auto;
   text-align: center;
-  color: #fff; }
+  color: #fff;
+  padding-top: 8%; }
 
 /*@import "base/breakpoints";
 @import "base/common";
