--- a/ChallengeBoard.Web/Views/Home/Index.cshtml
+++ b/ChallengeBoard.Web/Views/Home/Index.cshtml
@@ -2,22 +2,31 @@
 @using ChallengeBoard.Web.Models.ViewModels
 @model BoardViewModel
 
+@{
+    int maxPoints = 0;
+}
+
 
 <div class="cards" id="Cards">
     <div class="item intro">
         <div id="user-hide">@Model.CurrentUser.UserName</div>
         <div class="intro-progress" id="ProgressBarContainer"></div>
         <h1 class="intro-name">@Model.CurrentUser.Name</h1>
-        <strong class="intro-score">@Model.TotalPoints</strong>
+        <strong class="intro-score" id="intro-score">@Model.TotalPoints</strong>
+        
         <div class="intro-awards">
-            <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>
-            <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>
-            <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>    
-            <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>    
-            <span class="intro-award icon icon-health" aria-hidden="true"><span class="card-icon-ring"></span></span>
+            <span class="intro-award icon icon-health" aria-hidden="true"><span class="@(Model.TotalPoints >= 100 ? "fulfilled" : string.Empty) card-icon-ring"></span></span>
+            <span class="intro-award icon icon-health" aria-hidden="true"><span class="@(Model.TotalPoints >= 350 ? "fulfilled" : string.Empty)card-icon-ring"></span></span>
+            <span class="intro-award icon icon-health" aria-hidden="true"><span class="@(Model.TotalPoints >= 500 ? "fulfilled" : string.Empty)card-icon-ring"></span></span>    
+            <span class="intro-award icon icon-health" aria-hidden="true"><span class="@(Model.TotalPoints >= 700 ? "fulfilled" : string.Empty)card-icon-ring"></span></span>    
+            <span class="intro-award icon icon-health" aria-hidden="true"><span class="@(Model.TotalPoints >= 1000 ? "fulfilled" : string.Empty)card-icon-ring"></span></span>
         </div>        
     </div>      
     @foreach (var challenge in Model.Challenges) {
+        
+        {
+            maxPoints += challenge.Points;
+        }
         <div class="item card @(challenge.IsComplete(Model.CurrentUser) ? "card--complete" : string.Empty)" role="button" data-id="@challenge.Id" data-points="@challenge.Points">
             <div class="card-background"></div>
             <div class="card-body">
@@ -33,5 +42,6 @@
             </div>
         </div>
     }
+    <div id="max-score">@maxPoints</div>
 </div>
 
