--- a/ChallengeBoard.Web/Content/Styles/Components/Card.scss
+++ b/ChallengeBoard.Web/Content/Styles/Components/Card.scss
@@ -181,6 +181,8 @@
     height:52px;
     border-radius:50%;
     margin:0 12px;
+    display: inline-block;
+    position: relative;
 }
 /*
 @media (max-width:1900px) {
