--- a/ChallengeBoard.Web/Static/Styles/App.css
+++ b/ChallengeBoard.Web/Static/Styles/App.css
@@ -1093,7 +1093,9 @@ Styleguide 3.1.
   width: 52px;
   height: 52px;
   border-radius: 50%;
-  margin: 0 12px; }
+  margin: 0 12px;
+  display: inline-block;
+  position: relative; }
 
 /*
 @media (max-width:1900px) {
