--- a/ChallengeBoard.Web/Content/Styles/Components/Card.scss
+++ b/ChallengeBoard.Web/Content/Styles/Components/Card.scss
@@ -42,6 +42,9 @@
         border-color:#dbcff3;
         color:#c1adea;
     }
+    .card-count {
+        color:#c1adea;
+    }
     .card-icon-inner {
         transform:translateX(-34px);
     }
@@ -136,7 +139,16 @@
     border-top:1px solid rgba(255,255,255,0.2);
     padding-top:8px;
 }
-
+.card-count {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    color:rgba(255,255,255,0.5);
+}
+.card-count--subtr,
+.card-count--add {
+    display: none;
+}
 .intro {
     float:left;
     //width:516px;
@@ -184,7 +196,7 @@
     display: inline-block;
     position: relative;
 }
-/*
+
 @media (max-width:1900px) {
     .card {
         width:12.5%;
@@ -248,4 +260,4 @@
     .intro {
         width:100%;
     }
-}*/
+}
