--- a/ChallengeBoard.Web/Static/Styles/App.css
+++ b/ChallengeBoard.Web/Static/Styles/App.css
@@ -966,6 +966,9 @@ Styleguide 3.1.
   border-color: #dbcff3;
   color: #c1adea; }
 
+.card--complete .card-count {
+  color: #c1adea; }
+
 .card--complete .card-icon-inner {
   transform: translateX(-34px); }
 
@@ -1052,6 +1055,16 @@ Styleguide 3.1.
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   padding-top: 8px; }
 
+.card-count {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: rgba(255, 255, 255, 0.5); }
+
+.card-count--subtr,
+.card-count--add {
+  display: none; }
+
 .intro {
   float: left;
   width: 33.2%;
@@ -1097,71 +1110,54 @@ Styleguide 3.1.
   display: inline-block;
   position: relative; }
 
-/*
-@media (max-width:1900px) {
-    .card {
-        width:12.5%;
-    }
-    .intro {
-        width:25%;
-    }
-}
-@media (max-width:1800px) {
-    .card {
-        width:14.285%;
-    }
-    .intro {
-        width:28.571%;
-    }
-}
-@media (max-width:1600px) {
-    .card {
-        width:16.667%;
-    }
-    .intro {
-        width:33.334%;
-    }
-}
-@media (max-width:1400px) {
-    .card {
-        width:20%;
-    }
-    .intro {
-        width:40%;
-    }
-}
-@media (max-width:1200px) {
-    .card {
-        width:25%;
-    }
-    .intro {
-        width:50%;
-    }
-}
-@media (max-width:1000px) {
-    .card {
-        width:33.333%;
-    }
-    .intro {
-        width:66.666%;
-    }
-}
-@media (max-width:800px) {
-    .card {
-        width:50%;
-    }
-    .intro {
-        width:100%;
-    }
-}
-@media (max-width:500px) {
-    .card {
-        width:100%;
-    }
-    .intro {
-        width:100%;
-    }
-}*/
+@media (max-width: 1900px) {
+  .card {
+    width: 12.5%; }
+  .intro {
+    width: 25%; } }
+
+@media (max-width: 1800px) {
+  .card {
+    width: 14.285%; }
+  .intro {
+    width: 28.571%; } }
+
+@media (max-width: 1600px) {
+  .card {
+    width: 16.667%; }
+  .intro {
+    width: 33.334%; } }
+
+@media (max-width: 1400px) {
+  .card {
+    width: 20%; }
+  .intro {
+    width: 40%; } }
+
+@media (max-width: 1200px) {
+  .card {
+    width: 25%; }
+  .intro {
+    width: 50%; } }
+
+@media (max-width: 1000px) {
+  .card {
+    width: 33.333%; }
+  .intro {
+    width: 66.666%; } }
+
+@media (max-width: 800px) {
+  .card {
+    width: 50%; }
+  .intro {
+    width: 100%; } }
+
+@media (max-width: 500px) {
+  .card {
+    width: 100%; }
+  .intro {
+    width: 100%; } }
+
 html {
   height: 100%; }
 
