--- a/ChallengeBoard.Web/Static/Styles/App.css
+++ b/ChallengeBoard.Web/Static/Styles/App.css
@@ -1156,7 +1156,8 @@ Styleguide 3.1.
   .card {
     width: 100%; }
   .intro {
-    width: 100%; } }
+    width: 100%;
+    height: 476px; } }
 
 html {
   height: 100%; }
