--- a/ChallengeBoard.Web/Static/Styles/App.css
+++ b/ChallengeBoard.Web/Static/Styles/App.css
@@ -1063,7 +1063,9 @@ Styleguide 3.1.
 
 .card-count--subtr,
 .card-count--add {
-  display: none; }
+  display: inline-block;
+  width: 30px;
+  text-align: center; }
 
 .intro {
   float: left;
