--- a/ChallengeBoard.Web/Static/Styles/App.css
+++ b/ChallengeBoard.Web/Static/Styles/App.css
@@ -1098,6 +1098,15 @@ Styleguide 3.1.
   top: 234px;
   font-weight: 300; }
 
+.intro-status {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: auto;
+  color: #fff;
+  font-size: 25px;
+  font-weight: normal; }
+
 .intro-awards {
   position: absolute;
   top: 335px;
@@ -1159,7 +1168,9 @@ Styleguide 3.1.
     width: 100%; }
   .intro {
     width: 100%;
-    height: 476px; } }
+    height: 476px; }
+  .intro-status {
+    font-size: 20px; } }
 
 html {
   height: 100%; }
