--- a/ChallengeBoard.Web/Views/Home/Index.cshtml
+++ b/ChallengeBoard.Web/Views/Home/Index.cshtml
@@ -14,7 +14,17 @@
         <div class="intro-progress" id="ProgressBarContainer"></div>
         <h1 class="intro-name">@Model.CurrentUser.Name</h1>
         <strong class="intro-score" id="intro-score">@Model.TotalPoints</strong>
-        
+        @{
+            if (Model.IsAuthenticated)
+            {
+                <strong class="intro-status">Inloggad</strong>
+            }
+            else
+            {
+                <strong class="intro-status">Inte inloggad</strong>
+            }
+
+        }
         <div class="intro-awards">
             <span class="intro-award icon icon-health" aria-hidden="true"><span id="bonus-level-one" class="@(Model.TotalPoints >= 100 ? "fulfilled" : string.Empty) card-icon-ring"></span></span>
             <span class="intro-award icon icon-health" aria-hidden="true"><span id="bonus-level-two" class="@(Model.TotalPoints >= 350 ? "fulfilled" : string.Empty) card-icon-ring"></span></span>
@@ -47,6 +57,6 @@
         </div>
     }
     <div id="max-score">@maxPoints</div>
-    <div><a href="#">History</a></div>
+    
 </div>
 
