--- a/ChallengeBoard.Web/Content/Styles/App.scss
+++ b/ChallengeBoard.Web/Content/Styles/App.scss
@@ -11,6 +11,7 @@
 @import "icons/fixedwidth.scss";
 
 @import 'components/card.scss';
+@import 'components/historyfeed.scss';
 
 @import 'layout/common.scss';
 
