--- a/ChallengeBoard.Web/Content/Styles/Components/Card.scss
+++ b/ChallengeBoard.Web/Content/Styles/Components/Card.scss
@@ -1,9 +1,11 @@
 .cards {
     list-style:none;
-    padding:20px;
+    padding:20px 0 20px 20px;
     margin:0;
     font-size:0;
     box-sizing: content-box;
+    width: 85%;
+    float: left;
 }
 .card {
     font-size:16px;
