--- a/ChallengeBoard.Web/Content/Styles/Icons/_Icons.scss
+++ b/ChallengeBoard.Web/Content/Styles/Icons/_Icons.scss
@@ -17,6 +17,10 @@ Markup:
 <span class="icon icon-check icon--fw icon--lg" aria-hidden="true"r></span> .icon-check
 </div>
 
+<div style="border-top:1px solid #eee;border-bottom:1px solid #eee;margin-bottom:10px;">
+<span class="icon icon-clock icon--fw icon--lg" aria-hidden="true"r></span> .icon-clock
+</div>
+
 
 
 Styleguide 3.3.
@@ -26,6 +30,7 @@ Styleguide 3.3.
 $icon-plus: "\E001";
 $icon-health: "\E002";
 $icon-check: "\E003";
+$icon-clock: "\E004";
 
 
 .icon-plus:before {
@@ -36,5 +41,8 @@ $icon-check: "\E003";
 }
 .icon-check:before {
 	content: "#{$icon-check}";
+}
+.icon-clock:before {
+	content: "#{$icon-clock}";
 }
 
