--- a/OnBoard.Web/Views/Home/Index.cshtml
+++ b/OnBoard.Web/Views/Home/Index.cshtml
@@ -7,7 +7,10 @@
     int maxPoints = 0;
 }
 
-
+<div class="information">
+    <h4>Välkommen till Meridium!</h4>
+    <p>Ta tag i en utmaning och genomför, sedan checkar du i och inkasserar dina poäng. När du når 100 är du klar!</p>
+</div>
 <div class="cards" id="Cards">
     <div class="item intro">
         <div id="user-hide">@Model.CurrentUser.UserName</div>
